// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifExpertApp /> Debe mostrar una lista de categorias de gifs  1`] = `
<Fragment>
  <h2>
    GidExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="DBZ"
      key="DBZ"
    />
    <GifGrid
      category="ONE PIECE"
      key="ONE PIECE"
    />
  </ol>
</Fragment>
`;

exports[`<GifExpertApp /> Debe renderizar exitosamente  1`] = `
<Fragment>
  <h2>
    GidExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Naruto"
      key="Naruto"
    />
  </ol>
</Fragment>
`;
